chore: update app logo and names

--- a/notes/index.html
+++ b/notes/index.html
@@ -8,8 +8,8 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>Notes ig</title>
-    <meta name="title" content="Notes ig" />
+    <title>Leaflet</title>
+    <meta name="title" content="Leaflet" />
     <meta
       name="description"
       content="A minimalist note-taking app with cloud sync, dark mode, and offline support. Built because I dont like apple notes."
@@ -18,7 +18,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://notes-lemon-nine.vercel.app/" />
-    <meta property="og:title" content="Notes ig" />
+    <meta property="og:title" content="Leaflet" />
     <meta
       property="og:description"
       content="A minimalist note-taking app with cloud sync, dark mode, and offline support. Built because I dont like apple notes."
@@ -31,7 +31,7 @@
       property="twitter:url"
       content="https://notes-lemon-nine.vercel.app/"
     />
-    <meta property="twitter:title" content="Notes ig" />
+    <meta property="twitter:title" content="Leaflet" />
     <meta
       property="twitter:description"
       content="A minimalist note-taking app with cloud sync, dark mode, and offline support. Built because I dont like apple notes."
@@ -67,7 +67,7 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="apple-mobile-web-app-title" content="Notes ig" />
+    <meta name="apple-mobile-web-app-title" content="Leaflet" />
     <meta name="mobile-web-app-capable" content="yes" />
 
     <!-- iOS specific tags -->
@@ -76,7 +76,7 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="apple-mobile-web-app-title" content="Notes ig" />
+    <meta name="apple-mobile-web-app-title" content="Leaflet" />
 
     <!-- Apple touch icons -->
     <link
