--- a/notes/index.html
+++ b/notes/index.html
@@ -17,47 +17,47 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://notes-lemon-nine.vercel.app/" />
+    <meta property="og:url" content="https://leaflet.at/" />
     <meta property="og:title" content="Leaflet" />
     <meta
       property="og:description"
       content="A minimalist note-taking app with cloud sync, dark mode, and offline support. Built because I dont like apple notes."
     />
-    <meta property="og:image" content="/assets/note512.svg" />
+    <meta property="og:image" content="/assets/leaflet-maskable.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://notes-lemon-nine.vercel.app/"
+      content="https://leaflet.at/"
     />
     <meta property="twitter:title" content="Leaflet" />
     <meta
       property="twitter:description"
       content="A minimalist note-taking app with cloud sync, dark mode, and offline support. Built because I dont like apple notes."
     />
-    <meta property="twitter:image" content="src/assets/note512.svg" />
+    <meta property="twitter:image" content="/assets/leaflet-maskable.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="src/assets/note.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/leaflet-maskable.svg" />
     <link
       rel="icon"
       type="image/svg+xml"
       sizes="32x32"
-      href="src/assets/note32.svg"
+      href="src/assets/leaflet-maskable.svg"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="src/assets/note180.svg"
+      href="src/assets/leaflet-maskable.svg"
     />
     <link
       rel="icon"
       type="image/svg+xml"
       sizes="192x192"
-      href="src/assets/note192.svg"
+      href="src/assets/leaflet-maskable.svg"
     />
-    <link rel="mask-icon" href="src/assets/note-maskable.png" color="#000000" />
+    <link rel="mask-icon" href="src/assets/leaflet-maskable.png" color="#000000" />
 
     <!-- PWA -->
     <link rel="manifest" href="/manifest.json" />
@@ -82,27 +82,27 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="src/assets/note180.svg"
+      href="src/assets/leaflet-maskable.svg"
     />
     <link
       rel="apple-touch-icon"
       sizes="192x192"
-      href="src/assets/note192.svg"
+      href="src/assets/leaflet-maskable.svg"
     />
     <link
       rel="apple-touch-icon"
       sizes="512x512"
-      href="src/assets/note-maskable.svg"
+      href="src/assets/leaflet-maskable.svg"
     />
 
     <!-- Safari pinned tab icon -->
-    <link rel="mask-icon" href="src/assets/note-maskable.png" color="#000000" />
+    <link rel="mask-icon" href="src/assets/leaflet-maskable.png" color="#000000" />
 
     <!-- IOS ICON -->
     <link
       rel="apple-touch-icon"
       sizes="512x512"
-      href="src/assets/note-maskable.png"
+      href="src/assets/leaflet-maskable.png"
     />
   </head>
   <body>
